@@ -1,3 +1,6 @@
+2019-12-09  Kirit Saelensminde  <kirit@felspar.com>
+ Remove `-e` (print arguments/environment) support from command line.
+
 2019-08-05  Pumidon Phathong  <pumidon@hot-now.com>
  Add sloppy json parser.
 
